fix: fix #50
use processBuilder to fix path which contains space will cause error bug